--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -267,9 +267,17 @@ languages {
     versions {
       "draft-2" {
         language-factory = "languages.wdl.draft2.WdlDraft2LanguageFactory"
+        config {
+          validate-all-inputs: true
+          enabled: true
+        }
       }
       "draft-3" {
         language-factory = "languages.wdl.draft3.WdlDraft3LanguageFactory"
+        config {
+          validate-all-inputs: true
+          enabled: true
+        }
       }
     }
   }
@@ -277,6 +285,10 @@ languages {
     versions {
       "v1.0" {
         language-factory = "languages.cwl.CwlV1_0LanguageFactory"
+        config {
+          validate-all-inputs: false
+          enabled: true
+        }
       }
     }
   }
