--- a/src/bin/travis/resources/tes_centaur.conf
+++ b/src/bin/travis/resources/tes_centaur.conf
@@ -42,3 +42,5 @@ database {
   db.driver = "com.mysql.jdbc.Driver"
   profile = "slick.jdbc.MySQLProfile$"
 }
+
+backend.providers.TES.config.concurrent-job-limit = 20
