Disable strict checking by default in draft 2

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -268,14 +268,14 @@ languages {
       "draft-2" {
         language-factory = "languages.wdl.draft2.WdlDraft2LanguageFactory"
         config {
-          validate-all-inputs: true
+          strict-validation: false
           enabled: true
         }
       }
       "draft-3" {
         language-factory = "languages.wdl.draft3.WdlDraft3LanguageFactory"
         config {
-          validate-all-inputs: true
+          strict-validation: true
           enabled: true
         }
       }
