--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -286,7 +286,7 @@ languages {
       "v1.0" {
         language-factory = "languages.cwl.CwlV1_0LanguageFactory"
         config {
-          validate-all-inputs: false
+          strict-validation: false
           enabled: true
         }
       }
