--- a/cromwell.examples.conf
+++ b/cromwell.examples.conf
@@ -205,21 +205,21 @@ engine {
 # You probably don't want to override the language factories here, but the validate-all-inputs and enabled fields might
 # be of interest.
 # `enabled`: Defaults to `true`. Set to `false` to disallow workflows of this language version from being run.
-# `validate-all-inputs`: Specifies whether workflows fail if the inputs JSON (or YAML) file contains values which the workflow did not ask for (and will therefore have no effect).
+# `strict-validation`: Specifies whether workflows fail if the inputs JSON (or YAML) file contains values which the workflow did not ask for (and will therefore have no effect).
 languages {
   WDL {
     versions {
       "draft-2" {
         # language-factory = "languages.wdl.draft2.WdlDraft2LanguageFactory"
         # config {
-        #   validate-all-inputs: true
+        #   strict-validation: true
         #   enabled: true
         # }
       }
       "draft-3" {
         # language-factory = "languages.wdl.draft3.WdlDraft3LanguageFactory"
         # config {
-        #   validate-all-inputs: true
+        #   strict-validation: true
         #   enabled: true
         # }
       }
@@ -230,7 +230,7 @@ languages {
       "v1.0" {
         # language-factory = "languages.cwl.CwlV1_0LanguageFactory"
         # config {
-        #   validate-all-inputs: false
+        #   strict-validation: false
         #   enabled: true
         # }
       }
