--- a/cromwell.examples.conf
+++ b/cromwell.examples.conf
@@ -202,9 +202,9 @@ engine {
   }
 }
 
-# You probably don't want to override the language factories here, but the validate-all-inputs and enabled fields might
-# be of interest.
-# `enabled`: Defaults to `true`. Set to `false` to disallow workflows of this language version from being run.
+# You probably don't want to override the language factories here, but the strict-validation and enabled fields might be of interest:
+#
+# `enabled`: Defaults to `true`. Set to `false` to disallow workflows of this language/version from being run.
 # `strict-validation`: Specifies whether workflows fail if the inputs JSON (or YAML) file contains values which the workflow did not ask for (and will therefore have no effect).
 languages {
   WDL {
